<?xml version="1.0"?>
<package format="2">
    <name>LRA-star</name>
    <version>0.0.0</version>
    <description>Lazy Receding Horizon A*</description>
    <author email="adityavk@uw.edu">Aditya Vamsikrishna</author>
    <maintainer email="adityavk@uw.edu"></maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>clang-format-3.8</buildtool_depend>
    <depend>ompl</depend>
    <depend>boost</depend>
</package>
